# pepper-pad

./: .gitignore  README.md  assignment.md  plan.md  pyproject.toml
scripts/: build_scene.py  calibrate_hold.py  demo_nullspace.py  demo_pad.py  demo_path.py  record_demo.py  smoke_test.py  verify_jacobian.py
src/pepper_pad/: __init__.py  controller.py  kinematics.py  pad.py  path.py  record.py  sim.py
